--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 
 		var marker = new google.maps.Marker({
 			position: currentPosition,
-			map: map
+			map: map,
+			  optimized: false,
 		});
 	}
 	function onGeoError(error){
@@ -75,7 +76,8 @@ var pinIcon = new google.maps.MarkerImage(
 		var mapMarker = new google.maps.Marker({
 			position:latlng,
 			title: "Estás aquí.",
-			icon:pinIcon
+			icon:pinIcon,
+			  optimized: false,
 		});
 
 
