--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		var marker = new google.maps.Marker({
 			position: currentPosition,
 			map: map,
-			  optimized: false,
+			  optimized: false
 		});
 	}
 	function onGeoError(error){
@@ -77,7 +77,7 @@ var pinIcon = new google.maps.MarkerImage(
 			position:latlng,
 			title: "Estás aquí.",
 			icon:pinIcon,
-			  optimized: false,
+			  optimized: false
 		});
 
 
