modified:   index.html

--- a/index.html
+++ b/index.html
@@ -9,33 +9,38 @@
 	<script type="text/javascript" src="js/jquerymobile.js"></script>
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 	<script type="text/javascript" src="js/cordova-2.3.0"></script>
-		<script type="text/javascript" src="js/html5sql.js"></script>
+	<script type="text/javascript" src="js/html5sql.js"></script>
 
 	<script type="text/javascript">
 	var lat, lon, map, demoRunning;
 	$(document).bind("pageshow", "#firstpage",function(evt, data){
 		navigator.geolocation.getCurrentPosition(onGeoSuccess, onGeoError);
-		createTables();
+		db = window.openDatabase("databaseName", "1.0", "Display Name", 200000);
 	})
 
-	function getFarolas(){
-		var latitud, longitud;
-		html5sql.process(
-					"SELECT * FROM farola",
-                        function(transaction, results){ //Success
-                        	alert("Consulta efectuada con exito");
-                        	console.log(results.rows.item(0));
-                        	latitud = results.rows.item(2).latitud;
-                        	longitud = results.rows.item(2).longitud;
-				putFarola(latitud, longitud);
+	function getFarolas(tx){
+		alert("llega a getFarolas");
+		tx.executeSql("SELECT * FROM farola", [], getFarolasOK, error);
+	}
+	function createTables(tx){
+		tx.executeSql("DROP TABLE IF EXISTS farola;");
+		tx.executeSql("CREATE TABLE IF NOT EXISTS farola (id, latitud, longitud);");
+		tx.executeSql("INSERT INTO farola (id,latitud, longitud) VALUES(0, 41.39991, 2.171942);");
+	}
 
-                        },
-                        function(error, failingQuery){ //Failure
-                        	$("#results").text("Error: " + error.message);
+	function getFarolasOK(tx, results){
+		var len = results.rows.length;
+		alert("llega a getFarolasOK. length: " + len);
 
-                        }
-                        );
-
+		var output = "";
+		for(var i = 0; i<len; i++){
+			latitud = results.rows.item(i).latitud;
+			longitud = results.rows.item(i).longitud;
+			putFarola(latitud, longitud);
+		}
+	}
+	function error(error){
+		alert("hubo un error: " + error.message);
 	}
 	function onGeoSuccess(position){
 		var lat = position.coords.latitude;
@@ -52,6 +57,8 @@
 			position: currentPosition,
 			map: map,
 		});
+		db.transaction(createTables, error, transactionOK);
+		db.transaction(getFarolas, error, transactionOK);
 	}
 	function onGeoError(error){
 		if(error==1){
@@ -72,49 +79,22 @@ var pinIcon = new google.maps.MarkerImage(
 			);
 //icon: "http://www.gettyicons.com/free-icons/108/gis-gps/png/24/needle_left_yellow_2_24.png"
 
-		var mapMarker = new google.maps.Marker({
-			position:latlng,
-			title: "Estás aquí.",
-			icon: {
-                  url: 'img/farola.svg',
-                  size: new google.maps.Size(100,100)
-              },
-		});
+var mapMarker = new google.maps.Marker({
+	position:latlng,
+	title: "Estás aquí.",
+	icon: pinIcon
+});
 
 
-		mapMarker.setMap(map);
-	}
+mapMarker.setMap(map);
+}
 
 
-	function createTables(){
-			if(!demoRunning){
-			//	$("#map").text("running...");
-				demoRunning = true;
-				try {
-					html5sql.openDatabase("demo", "Demo Database", 5*1024*1024);
-					$.get('database.sql',function(sql){
-						var startTime = new Date();
-						html5sql.process(
-							sql,
-                        function(){ //Success
-                        	var endTime = new Date();
-                        	demoRunning = false;
-                        	getFarolas();
-                        },
-                        function(error, failingQuery){ //Failure
-                        	alert("error en createTables" + error.message);
-                        	demoRunning = false;
-                        }
-                        );
-					});
+function transactionOK(){
 
-				} catch (error) {
-					$("#results").text("Error: " + error.message);
-					demoRunning = false;
-				}
-			}
-		}
-	</script>
+}
+
+</script>
 
 </head>
 <body>
