--- a/index.html
+++ b/index.html
@@ -49,10 +49,7 @@
 	}
 
 	function getFarolasOK(tx, results){
-		alert("getFarolasOK");
 		var len = results.rows.length;
-		alert("llega a getFarolasOK. length: " + len);
-
 		var output = "";
 		for(var i = 0; i<len; i++){
 			latitud = results.rows.item(i).latitud;
@@ -64,7 +61,6 @@
 		alert("hubo un error: " + error.message);
 	}
 	function onGeoSuccess(position){
-		alert("onGeoSuccess");
 		var lat = position.coords.latitude;
 		var lon = position.coords.longitude;
 		var currentPosition = new google.maps.LatLng(lat, lon);
@@ -79,7 +75,6 @@
 			position: currentPosition,
 			map: map,
 		});
-		alert("leeeegaaaaaaaa");
 		db.transaction(createTables, error, transactionOK);
 		db.transaction(getFarolas, error, transactionOK);
 	}
@@ -108,7 +103,7 @@
 var mapMarker = new google.maps.Marker({
 	position:latlng,
 	title: "Estás aquí.",
-	icon: pinIcon
+	icon: "http://www.gettyicons.com/free-icons/108/gis-gps/png/24/needle_left_yellow_2_24.png"
 });
 mapMarker.setMap(map);
 }
