--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 var mapMarker = new google.maps.Marker({
 	position:latlng,
 	title: "Estás aquí.",
-	icon: "http://www.gettyicons.com/free-icons/108/gis-gps/png/24/needle_left_yellow_2_24.png"
+	icon: pinIcon
 });
 mapMarker.setMap(map);
 }
