modified:   index.html 	css/images/ 	img/farola.png 	img/needle_left_yellow_2_24.png

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 var mapMarker = new google.maps.Marker({
 	position:latlng,
 	title: "Estás aquí.",
-	icon: pinIcon
+	icon: "img/farola.png"
 });
 mapMarker.setMap(map);
 }
