modified:   index.html 	css/images/ 	img/farola.png 	img/needle_left_yellow_2_24.png

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		var latlng = new google.maps.LatLng(lat, lon);
 
 		var pinIcon = new google.maps.MarkerImage(
-			"img/farola.svg",
+			"img/farola.png",
 			null,
 			null,
 			null,
@@ -107,7 +107,7 @@
 var mapMarker = new google.maps.Marker({
 	position:latlng,
 	title: "Estás aquí.",
-	icon: "img/farola.png"
+	icon: pinIcon
 });
 mapMarker.setMap(map);
 }
