modified:   index.html 	css/images/ 	img/farola.png 	img/needle_left_yellow_2_24.png

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		var latlng = new google.maps.LatLng(lat, lon);
 
 		var pinIcon = new google.maps.MarkerImage(
-			"img/farola.png",
+			"assets/www/img/farola.png",
 			null,
 			null,
 			null,
