modified:   index.html

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
 		var latlng = new google.maps.LatLng(lat, lon);
 
 		var pinIcon = new google.maps.MarkerImage(
-			"assets/www/img/farola.png",
+		//	"assets/www/img/farola.png",
+			"img/farola.png",
 			null,
 			null,
 			null,
