--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 	$(document).on("pageinit", "#firstpage",function(evt){
 		$(document).bind("pageshow", "#firstpage",function(e, data){
 			//jqmReadyDeferred.resolve(); // el framework jquery mobile fue cargado
-			alert("stop");
 			$.mobile.changePage("#secondpage");
 		});
 	});
@@ -34,8 +33,7 @@
 	$.when(deviceReadyDeferred, jqmReadyDeferred).then(doWhenBothFrameworksLoaded);
 	function doWhenBothFrameworksLoaded() {
 		//$.mobile.changePage("#secondpage");
-		alert("los dos frameworks cargados");
-		alert(navigator.connection.type);
+
 		/*Probar los ejercicios utilizando localhost en vez de file:/// y mejor en chrome que en firefox, de lo contrario, funciona de forma intermitente*/
 		/*PhoneGap Documentation: The Android 2.x simulators will not return a geolocation result unless the enableHighAccuracy option is set to true.*/
 		/*Si estoy usando el emulador de Android, no olvidarme de pulsar Emulator Control -> Manual -> Decimal para enviar mis coordenadas, es posible que el telefono no las tenga seteadas*/
@@ -48,7 +46,6 @@
 		db = window.openDatabase("databaseName", "1.0", "Display Name", 200000);
 	}
 	function getFarolas(tx){
-		alert("llega a getFarolas");
 		tx.executeSql("SELECT * FROM farola", [], getFarolasOK, error);
 	}
 	function createTables(tx){
@@ -84,13 +81,12 @@
 			center: currentPosition,
 			mapTypeId: google.maps.MapTypeId.ROADMAP
 		};
-		map = new google.maps.Map($("#secondpage #map"), mapoptions);
+		map = new google.maps.Map(document.getElementById("map"), mapoptions);
 
 		var marker = new google.maps.Marker({
 			position: currentPosition,
 			map: map,
 		});
-		alert("stop");
 		db.transaction(createTables, error, transactionOK);
 		db.transaction(getFarolas, error, transactionOK);
 	}
@@ -104,7 +100,6 @@
 		}
 	}
 	function putFarola(lat, lon){
-		alert("lat y lon" + lat);
 		var latlng = new google.maps.LatLng(lat, lon);
 
 		var pinIcon = new google.maps.MarkerImage(
@@ -154,9 +149,8 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 			<h1>Cabecera</h1>
 		</header>
 		<div class="content2" data-role="content">
-			pagina 2
-			ulala			<div id="map" ></div>
-
+<div id="map" ></div>
+<button onclick="doWhenBothFrameworksLoaded()">dsa</button>
 		</div>
 		<footer data-role="footer">El pie de la página</footer>
 	</section>
