--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	$(document).on("pageinit", "#firstpage",function(evt){
 		$(document).bind("pageshow", "#firstpage",function(e, data){
 			//jqmReadyDeferred.resolve(); // el framework jquery mobile fue cargado
+			alert("stop");
 			$.mobile.changePage("#secondpage");
 		});
 	});
@@ -33,7 +34,8 @@
 	$.when(deviceReadyDeferred, jqmReadyDeferred).then(doWhenBothFrameworksLoaded);
 	function doWhenBothFrameworksLoaded() {
 		//$.mobile.changePage("#secondpage");
-
+		alert("los dos frameworks cargados");
+		alert(navigator.connection.type);
 		/*Probar los ejercicios utilizando localhost en vez de file:/// y mejor en chrome que en firefox, de lo contrario, funciona de forma intermitente*/
 		/*PhoneGap Documentation: The Android 2.x simulators will not return a geolocation result unless the enableHighAccuracy option is set to true.*/
 		/*Si estoy usando el emulador de Android, no olvidarme de pulsar Emulator Control -> Manual -> Decimal para enviar mis coordenadas, es posible que el telefono no las tenga seteadas*/
@@ -46,6 +48,7 @@
 		db = window.openDatabase("databaseName", "1.0", "Display Name", 200000);
 	}
 	function getFarolas(tx){
+		alert("llega a getFarolas");
 		tx.executeSql("SELECT * FROM farola", [], getFarolasOK, error);
 	}
 	function createTables(tx){
@@ -100,6 +103,7 @@
 		}
 	}
 	function putFarola(lat, lon){
+		alert("lat y lon" + lat);
 		var latlng = new google.maps.LatLng(lat, lon);
 
 		var pinIcon = new google.maps.MarkerImage(
@@ -149,7 +153,7 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 			<h1>Cabecera</h1>
 		</header>
 		<div class="content2" data-role="content">
-<div id="map" ></div>
+			pagina 2<div id="map" ></div>
 <button onclick="doWhenBothFrameworksLoaded()">dsa</button>
 		</div>
 		<footer data-role="footer">El pie de la página</footer>
