--- a/main.html
+++ b/main.html
@@ -5,12 +5,13 @@
 	<link rel="stylesheet" type="text/css" href="css/jquerymobile.css">
 	<link rel="stylesheet" type="text/css" href="http://code.google.com/apis/maps/documentation/javascript/examples/default.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<script type="text/javascript" src="js/create_tables.js"></script>
 
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/jquerymobile.js"></script>
 	<script type="text/javascript" src="js/cordova-2.5.0.js"></script>
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
-	 <script src="http://debug.phonegap.com/target/target-script-min.js#monteserin"></script>
+	<script src="http://debug.phonegap.com/target/target-script-min.js#monteserin"></script>
 	<script type="text/javascript">
 	var lat, lon;
 	var deviceReadyDeferred = $.Deferred();  // deviceReadyDeferred es la variable que usaremos para controlar cuando el framework fue cargado
@@ -50,61 +51,51 @@
 		//alert("llega a getFarolas");
 		tx.executeSql("SELECT * FROM farola", [], getFarolasOK, error);
 	}
-	function createTables(tx){
-		tx.executeSql("DROP TABLE IF EXISTS farola;");
-		tx.executeSql("CREATE TABLE IF NOT EXISTS farola (id, latitud, longitud);");
-		tx.executeSql("INSERT INTO farola (id,latitud, longitud) VALUES(0, 41.39991, 2.171942);");
-		tx.executeSql("INSERT INTO farola (id,latitud, longitud) VALUES(0, 37.450332, -122.089033);");
-		tx.executeSql("INSERT INTO farola (id,latitud, longitud) VALUES(0, 41.38737, 2.175236);");
-		tx.executeSql("INSERT INTO farola (id,latitud, longitud) VALUES(0, 41.395612, 2.142963);");
-		tx.executeSql("INSERT INTO farola (id,latitud, longitud) VALUES(0, 41.395612, 2.142963);");
-		tx.executeSql("INSERT INTO farola (id,latitud, longitud) VALUES(0, 41.369546, 2.134606);");
-		tx.executeSql("INSERT INTO farola (id,latitud, longitud) VALUES(0, 41.369756, 2.130378);");
-	}
 
-	function getFarolasOK(tx, results){
-		var len = results.rows.length;
-		var output = "";
-		for(var i = 0; i<len; i++){
-			latitud = results.rows.item(i).latitud;
-			longitud = results.rows.item(i).longitud;
-			putFarola(latitud, longitud);
+
+		function getFarolasOK(tx, results){
+			var len = results.rows.length;
+			var output = "";
+			for(var i = 0; i<len; i++){
+				latitud = results.rows.item(i).latitud;
+				longitud = results.rows.item(i).longitud;
+				putFarola(latitud, longitud);
+			}
 		}
-	}
-	function error(error){
-		alert("hubo un error: " + error.message);
-	}
-	function onGeoSuccess(position){
-		var lat = position.coords.latitude;
-		var lon = position.coords.longitude;
-		var currentPosition = new google.maps.LatLng(lat, lon);
-		var mapoptions = {
-			zoom : 12,
-			center: currentPosition,
-			mapTypeId: google.maps.MapTypeId.ROADMAP
-		};
-		map = new google.maps.Map(document.getElementById("map"), mapoptions);
-
-		var marker = new google.maps.Marker({
-			position: currentPosition,
-			map: map,
-		});
-		db.transaction(createTables, error, transactionOK);
-		db.transaction(getFarolas, error, transactionOK);
-	}
-	function onGeoError(error){
-		if(error==1){
-			alert("turn on geolocation services")
-		}else{
-			alert("geoError: " + error);
-			alert("error code: " + error.code);
-			alert("error message: " + error.message);
+		function error(error){
+			alert("hubo un error: " + error.message);
 		}
-	}
-	function putFarola(lat, lon){
-		var latlng = new google.maps.LatLng(lat, lon);
+		function onGeoSuccess(position){
+			var lat = position.coords.latitude;
+			var lon = position.coords.longitude;
+			var currentPosition = new google.maps.LatLng(lat, lon);
+			var mapoptions = {
+				zoom : 12,
+				center: currentPosition,
+				mapTypeId: google.maps.MapTypeId.ROADMAP
+			};
+			map = new google.maps.Map(document.getElementById("map"), mapoptions);
 
-		var pinIcon = new google.maps.MarkerImage(
+			var marker = new google.maps.Marker({
+				position: currentPosition,
+				map: map,
+			});
+			db.transaction(createTables, error, transactionOK);
+			db.transaction(getFarolas, error, transactionOK);
+		}
+		function onGeoError(error){
+			if(error==1){
+				alert("turn on geolocation services")
+			}else{
+				alert("geoError: " + error);
+				alert("error code: " + error.code);
+				alert("error message: " + error.message);
+			}
+		}
+		function putFarola(lat, lon){
+			var latlng = new google.maps.LatLng(lat, lon);
+
+			var pinIcon = new google.maps.MarkerImage(
 		//	"assets/www/img/farola.png",
 		"img/farola.png",
 		null,
@@ -113,44 +104,44 @@
 		new google.maps.Size(20, 50)
 		);
 
-		var mapMarker = new google.maps.Marker({
-			position:latlng,
-			clickable: true,
-			title: "Estás aquí.",
-			icon: pinIcon
-		});
-		google.maps.event.addListener(mapMarker, 'click', function(event) {
-			alert("Enviando a la base de datos...");
-		});
-		mapMarker.setMap(map);
-	}
-	function transactionOK(){
+			var mapMarker = new google.maps.Marker({
+				position:latlng,
+				clickable: true,
+				title: "Estás aquí.",
+				icon: pinIcon
+			});
+			google.maps.event.addListener(mapMarker, 'click', function(event) {
+				alert("Enviando a la base de datos...");
+			});
+			mapMarker.setMap(map);
+		}
+		function transactionOK(){
 
-	}
-	</script>
+		}
+		</script>
 
-</head>
-<body>
-	<section id="firstpage" data-role="page">
-		<header data-role="header">
-			<h1>Cabecera</h1>
-		</header>
-		<div class="content" data-role="content">
-<h1>loading...</h1>
-			<div id="results"></div>
-		</div>
-		<footer data-role="footer">El pie de la página</footer>
-	</section>
-	<section id="secondpage" data-role="page">
-		<header data-role="header">
-			<h1>Cabecera</h1>
-		</header>
-		<div class="content2" data-role="content">
-			pagina 2<div id="map" ></div>
-<button onclick="doWhenBothFrameworksLoaded()">dsa</button>
-		</div>
-		<footer data-role="footer">El pie de la página</footer>
-	</section>
+	</head>
+	<body>
+		<section id="firstpage" data-role="page">
+			<header data-role="header">
+				<h1>Cabecera</h1>
+			</header>
+			<div class="content" data-role="content">
+				<h1>loading...</h1>
+				<div id="results"></div>
+			</div>
+			<footer data-role="footer">El pie de la página</footer>
+		</section>
+		<section id="secondpage" data-role="page">
+			<header data-role="header">
+				<h1>Cabecera</h1>
+			</header>
+			<div class="content2" data-role="content">
+				<div id="map" ></div>
+				<button onclick="doWhenBothFrameworksLoaded()">dsa</button>
+			</div>
+			<footer data-role="footer">El pie de la página</footer>
+		</section>
 
-</body>
-</html>
+	</body>
+	</html>
